arbre en record et enlever trucs inutiles